# windsurf

./: .gitignore  Makefile  PROMPTS.md  README.md  STANDARDS.md  gitlab_checker.py  hatch.toml  pyproject.toml  requirements.txt  setup.py
src/: gitlab_checker.py
src/python_standards_checker/: __init__.py  cli.py  constants.py  utils.py
src/python_standards_checker/repositories/: gitlab.py  local.py
src/python_standards_checker/standards/: __init__.py  base.py  lock_file.py  makefile.py  no_conda.py  project_spec.py  pyproject_toml.py  python_version.py
src/standards_inspector/: __init__.py  cli.py
src/standards_inspector/repositories/: __init__.py  base.py  gitlab.py
src/standards_inspector/standards/: __init__.py  base.py  lock_file.py  makefile.py  no_conda.py  project_spec.py  python_version.py
tests/integration/: test_gitlab_checker.py  test_it_standards_inspector.py  test_python_standards_checker.py
tests/unit/: test_standards_inspector.py  test_version_support.py
