[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-standards-checker"
version = "0.1.0"
description = "CLI tool to check Python standards in GitLab repositories"
requires-python = ">=3.9"
dependencies = [
    "python-gitlab>=3.0.0",
    "python-dotenv>=1.0.0",
    "pytoml>=0.1.21",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "packaging>=23.0"
]

[project.scripts]
python-standards-checker = "python_standards_checker:main"

[tool.setuptools]
packages = ["python_standards_checker"]
include-package-data = true
zip-safe = false
