[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standards_inspector"
version = "0.1.0"
description = "A tool to check projects against established standards and best practices"
authors = [
    { name="Tung Huynh", email="tunghuynh314@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "python-gitlab>=3.0.0",
    "python-dotenv>=1.0.0",
    "pytoml>=0.1.21",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "packaging>=23.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
standards-inspector = "standards_inspector.cli:main"

[tool.setuptools]
packages = ["standards_inspector"]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
disable = "missing-module-docstring,redefined-outer-name,broad-exception-caught,too-many-statements,too-many-branches"
max-line-length = 120
